# AGE-2D-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
demo/superMarioBros/: superMario.cpp  superMario.h
demo/testDemo/: test.cpp  testDemo.cpp  testDemo.h
docs/: UML.drawio  document.md  plan.md
game/superMarioBros/: superMario.cpp  superMario.h
src/: ageEngine.h
src/common/: box.h  point.h  vec2d.h  velocity.h
src/controller/: controller.h  curseController.h
src/controller/adapter/: ncurseAdapter.cpp  ncurseAdapter.h
src/model/component/: border.h  boundingBox.cpp  boundingBox.h  collidable.h  component.h  despawn.h  gravitationalComponent.h  gravity.h  motion.h  position.h  positionComponent.h  render.h  renderer.h  texture.h  velocity.h  velocityComponent.h
src/model/component/global/: border.h  windowInfo.h
src/model/entity/: entity.cpp  entity.h
src/model/object/: object.cpp  object.h  objectModel.cpp  objectModel.h  rectObject.cpp  rectObject.h
src/model/object/objectModel/: ASCIIObject.cpp  ASCIIObject.h  bitmapObject.h  rectObject.cpp  rectObject.h
src/model/registry/: registry.h  scene.h
src/model/system/: collisionSystem.cpp  collisionSystem.h  despawnSystem.cpp  despawnSystem.h  motionSystem.cpp  motionSystem.h  renderSystem.cpp  renderSystem.h  system.h
src/model/window/: boardWindow.h  gameWindow.cpp  gameWindow.h  statusWindow.h  windowModel.cpp  windowModel.h
src/utils/: bitmap.h  camera.h  grid.h  math.cpp  math.h  timer.h  utility.cpp  utility.h  uuid.cpp  uuid.h
src/view/: boardView.h  cameraView.cpp  cameraView.h  statusView.h  view.h
src/view/object/: asciiObjectView.h  objectView.h  rectObjectView.h
